# snackcache

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: demo.py
snackcache/: __init__.py  cache.py  cli.py  main.py  normalizer.py  proxy.py
