[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snackcache"
version = "0.2.0"
description = "Semantic caching proxy for LLM APIs"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Snack AI", email = "hello@snackai.dev"}]
keywords = ["llm", "openai", "anthropic", "cache", "proxy", "ai", "inference", "semantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "numpy>=1.21.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]

[project.optional-dependencies]
redis = ["redis>=4.5.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=23.0.0", "ruff>=0.0.280"]

[project.scripts]
snackcache = "snackcache.cli:main"

[project.urls]
Homepage = "https://github.com/sodiumsun/snackcache"
Repository = "https://github.com/sodiumsun/snackcache"

[tool.setuptools.packages.find]
include = ["snackcache*"]
